tests/programs/a1/local/valid/InterfaceMethodExample.java
public interface InterfaceMethodExample {
    void interfaceMethod();
}
