tests/programs/a1/local/invalid/InvalidInterfaceMethodBody.java
public interface InvalidInterfaceMethodBody {
    void interfaceMethod() {
        // Invalid interface method with a body
    }
}
